<resources>
    <string name="app_name">Sofra</string>
    <string name="orderfood">order food</string>
    <string name="sellfood">sell food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plageraddcomment">plager to add comment or rank</string>
    <string name="addcommentorrank">add comment or rank</string>
    <string name="thismoment">this moment</string>
    <string name="city">city</string>
    <string name="neighborhood">neighborhood</string>
    <string name="limits">limits</string>
    <string name="linked">delivery charge</string>
    <string name="foodmenu">food menu</string>
    <string name="comments">comments and ranking</string>
    <string name="infoaboutresternt">information about resterent</string>
    <string name="limitstodelivery">limits to delivery</string>
    <string name="dliverycost">delivery cost</string>
    <string name="price">price</string>
    <string name="loginin">login in</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="forgetpass">forgert passeword ?</string>
    <string name="creataccount">not have account ? click here</string>
    <string name="newordered">new ordered</string>
    <string name="currentordered">current ordered</string>
    <string name="oldordered">old ordered</string>
    <string name="username">user name</string>
    <string name="numberorder">number order</string>
    <string name="total">total</string>
    <string name="address">adress</string>
    <string name="confirmdlivery">confirm deliver</string>
    <string name="canceldeliver">cancel</string>
    <string name="call">call</string>
    <string name="accpte">accept</string>
    <string name="nointernet">please connect the internet</string>
    <string name="wait">waiting</string>
    <string name="noresult">NO results</string>
</resources>
