<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/move">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/loginin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_input_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_login_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/emailicon"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:minWidth="350dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_input_text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_login_edit_text_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/passwordicon"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:minWidth="350dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_login_text_view_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:text="@string/forgetpass"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/shap_botton"
                android:text="@string/loginin" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_login_text_view_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/creataccount"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>