<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:layout_marginEnd="@dimen/d8"
        android:elevation="@dimen/d10"
        android:orientation="vertical"
        android:padding="5dp"
        app:cardCornerRadius="@dimen/d16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d125"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item_res_im_user"
                    android:layout_width="@dimen/d100"
                    android:layout_height="@dimen/d100"
                    android:layout_margin="@dimen/d10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/d8"
                        android:layout_marginEnd="@dimen/d8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/item_res_tv_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/d8"
                        android:layout_marginEnd="@dimen/d8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numberorder"
                            android:textSize="@dimen/txt_20sp" />

                        <TextView
                            android:id="@+id/item_res_tv_number_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/txt_20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/d8"
                        android:layout_marginEnd="@dimen/d8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textSize="@dimen/txt_20sp" />

                        <TextView
                            android:id="@+id/item_res_tv_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/txt_20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/d8"
                        android:layout_marginTop="@dimen/d8"
                        android:layout_marginEnd="@dimen/d8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="@dimen/txt_20sp" />

                        <TextView
                            android:id="@+id/item_res_tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/txt_20sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_old_res_ll_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_old_res_tv_stats"
                    android:layout_width="@dimen/d150"
                    android:layout_height="@dimen/d40"
                    android:layout_margin="@dimen/d10"
                    android:background="@drawable/shap_botton_green"
                    android:drawablePadding="@dimen/d5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_new_res_ll_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/item_new_res_bt_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d10"
                    android:layout_weight="1"
                    android:background="@drawable/shap_botton"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:drawablePadding="@dimen/d5"
                    android:text="@string/call" />

                <Button
                    android:id="@+id/item_new_res_bt_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:layout_weight="1"
                    android:background="@drawable/shap_botton_green"
                    android:drawableStart="@drawable/ic_like"
                    android:drawablePadding="@dimen/d5"
                    android:text="@string/accpte" />

                <Button
                    android:id="@+id/item_new_res_bt_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d10"
                    android:layout_weight="1"
                    android:background="@drawable/shap_botton_move"
                    android:drawableStart="@drawable/ic_close_black_24dp"
                    android:drawablePadding="@dimen/d5"
                    android:text="@string/canceldeliver" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_current_res_ll_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/item_current_res_bt_confirm"
                    android:layout_width="@dimen/d120"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d10"
                    android:background="@drawable/shap_botton_green"
                    android:drawableStart="@drawable/ic_like"
                    android:drawablePadding="@dimen/d5"
                    android:text="@string/confirmdlivery" />

                <Button
                    android:id="@+id/item_current_res_bt_cancel"
                    android:layout_width="@dimen/d120"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d10"
                    android:background="@drawable/shap_botton"
                    android:drawableStart="@drawable/ic_close_black_24dp"
                    android:drawablePadding="@dimen/d5"
                    android:text="@string/canceldeliver" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>